...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".New1Activity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="TextView" />

    <Button
        android:id="@+id/call_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onCall"
        android:text="Call number" />
...
